2017-10-22  Bruno Haible  <bruno@clisp.org>

	Clarify which compilers can align global variables.
	* lispbibl.d (HAVE_GLOBAL_VAR_ALIGN): New macro.
	* spvwtabf.d (subr_tab_data): Mention it in comment.
	* spvwtabs.d (symbol_tab_data): Likewise.

2017-10-22  Bruno Haible  <bruno@clisp.org>

	Avoid redefinition warnings.
	* lispbibl.d (TYPECODES, KERNELVOID32_HEAPCODES, GENERIC64_HEAPCODES,
	HEAPCODES, SINGLEMAP_MEMORY, GENERATIONAL_GC): Don't define if already
	defined.

2017-10-19  Bruno Haible  <bruno@clisp.org>

	Fix GC crash when cleaning weak hash table (regression from 2004-05-09).
	* hashtabl.d (prepare_resize): Pre-fill the new index-vector with "nix".

2017-10-19  Bruno Haible  <bruno@clisp.org>

	Readd currently redundant check, in comments.
	* hashtabl.d (prepare_resize): Readd test removed on 2012-03-10, but
	keep it disabled.

2017-10-19  Bruno Haible  <bruno@clisp.org>

	Fix build failure with DEBUG_GCSAFETY (regression from 2017-10-14).
	* makemake.in (gen.lispbibl.c): Replace 'print' statements with fprint
	statements.

2017-10-18  Bruno Haible  <bruno@clisp.org>

	Fix compilation failure with DEBUG_SPVW & SPVW_PURE & GENERATIONAL_GC.
	* spvw_global.d (mem): Remove heapnr_from_type field.
	(HAVE_HEAPNR_FROM_TYPE): Remove macro.
	(init_mem_heapnr_from_type): Remove function.
	(typecode_to_heapnr): New macro.
	* spvw_global_old.d: Likewise.
	* spvw_garcol.d (update): Use typecode_to_heapnr instead of
	mem.heapnr_from_type array.
	* spvw_garcol_old.d: Likewise.
	* spvw_genera1.d (rebuild_old_generation_cache, gc_check_at): Likewise.
	* spvw_genera1_old.d: Likewise.
	* spvw.d (init_memory): Update.

2017-10-18  Bruno Haible  <bruno@clisp.org>

	Fix build failure with cc on IRIX.
	* foreign.d (do_av_start): Access the 'flags' field only on Windows.

2017-10-18  Bruno Haible  <bruno@clisp.org>

	Fix build failure with pre-C99 compilers (regression from 2008-10-29).
	* spvw_allocate.d (allocate): Use braces at variable declarations after
	statements.
